--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
   <body>
     <h1>Welcome to the Meteo App</h1>
-    <footer>Coded by Myrto Lykaki</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/myrtolyk" target="_blank">Myrto Lykaki</a> and
+      is hosted on
+      <a href="https://github.com/myrtolyk/mymeteo-app" target="_blank"
+        >GitHub</a
+      >
+      and website hosted on
+      <a href="https://my-meteo-shecodes-app.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
